Add command role definitions and new run/shell commands for executing code

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,23 @@
+# Your bot name goes here
 PROJECT_CANIS_ALIAS=Canis
+
+# whether to enable debug mode
+# in debug mode, additional logging is enabled
 DEBUG=true
+
+# the command prefix used to trigger bot commands
 COMMAND_PREFIX=!
+
+# the bot can be configured to respond to commands with or without a prefix
+# if COMMAND_PREFIX_LESS is true, the bot will respond to commands without a prefix
 COMMAND_PREFIX_LESS=true
+
+# the port on which the server will run
 PORT=3000
+
+# automatically reloads commands as they are edited
 AUTO_RELOAD=false
+
+# the phone number of the super admin, used for privileged commands
+# this should be a valid phone number in the format
+SUPER_ADMIN=09123456789
