--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
+    "google-tts-api": "^2.0.2",
     "npmlog": "^7.0.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0"
