Add Prisma integration

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ AUTO_RELOAD=false
 # the phone number of the super admin, used for privileged commands
 # this should be a valid phone number in the format
 SUPER_ADMIN=09123456789
+
+# the database provider (e.g., postgresql, mysql, sqlite)
+DATABASE_PROVIDER=mysql
+
+# the database connection URL
+DATABASE_URL=mysql://root@localhost:3306/project_canis
