--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-tts-api": "^2.0.2",
     "npmlog": "^7.0.1",
     "qrcode-terminal": "^0.12.0",
+    "systeminformation": "^5.27.7",
     "whatsapp-web.js": "^1.31.0"
   },
   "devDependencies": {
