added mj and ai command

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ DATABASE_PROVIDER=mysql
 
 # the database connection URL
 DATABASE_URL=mysql://root@localhost:3306/project_canis
+
+# the OpenRouter API key for AI model access
+OPEN_ROUTER_API_KEY=
