bug fixes and improvements

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ DATABASE_URL=mysql://root@localhost:3306/project_canis
 
 # the OpenRouter API key for AI model access
 OPEN_ROUTER_API_KEY=
+
+# the shell to use for executing commands
+# this should be a valid shell path, e.g., /bin/bash, /bin/zsh
+EXEC_SHELL=/bin/bash
