--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "removeComments": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
