--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,12 @@ DATABASE_PROVIDER=mysql
 # the database connection URL
 DATABASE_URL=mysql://root@localhost:3306/project_canis
 
+# the AI provider to use for AI model access
+AI_PROVIDER=groq
 # the OpenRouter API key for AI model access
 OPEN_ROUTER_API_KEY=
+# the Groq API key for AI model access
+GROQ_API_KEY=
 
 # the shell to use for executing commands
 # this should be a valid shell path, e.g., /bin/bash, /bin/zsh
