--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "google-tts-api": "^2.0.2",
+    "groq-sdk": "^0.27.0",
     "npmlog": "^7.0.1",
     "qrcode-terminal": "^0.12.0",
     "systeminformation": "^5.27.7",
