--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "npmlog": "^7.0.1",
     "qrcode-terminal": "^0.12.0",
     "systeminformation": "^5.27.7",
-    "whatsapp-web.js": "^1.31.0"
+    "whatsapp-web.js": "^1.31.0",
+    "youtubei.js": "^15.0.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
