--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "email": "mrepol742@gmail.com"
   },
   "dependencies": {
-    "@openrouter/ai-sdk-provider": "^1.0.0-beta.1",
+    "@openrouter/ai-sdk-provider": "^1.0.0-beta.3",
     "@prisma/client": "^6.12.0",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
@@ -34,8 +34,7 @@
     "qrcode-terminal": "^0.12.0",
     "systeminformation": "^5.27.7",
     "whatsapp-web.js": "^1.31.0",
-    "youtubei.js": "^15.0.0",
-    "ytdl-core": "^4.11.5"
+    "youtubei.js": "^14.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
