--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.0.0-beta.3",
     "@prisma/client": "^6.12.0",
+    "ai": "^5.0.0-canary.24",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "google-tts-api": "^2.0.2",
