feat: integrate Redis for rate limiting and add Redis configuration

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ AUTO_RELOAD=false
 
 # the database connection URL
 DATABASE_URL=mysql://root@localhost:3306/project_canis
+REDIS_URL=redis://localhost:6379
 
 # the AI provider to use for AI model access
 AI_PROVIDER=groq
