--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "groq-sdk": "^0.27.0",
     "npmlog": "^7.0.1",
     "qrcode-terminal": "^0.12.0",
+    "redis": "^5.6.0",
     "systeminformation": "^5.27.7",
     "whatsapp-web.js": "^1.31.0",
     "youtubei.js": "^14.0.0"
