--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,22 @@ COMMAND_PREFIX_LESS=true
 # the port on which the server will run
 PORT=3000
 
+# the path to the Chrome executable for Puppeteer
+# Windows (Edge)
+# PUPPETEER_EXEC_PATH=C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe
+# Windows (Firefox)
+# PUPPETEER_EXEC_PATH=C:\\Program Files\\Mozilla Firefox\\firefox.exe
+# Linux (Firefox)
+# PUPPETEER_EXEC_PATH=/usr/bin/firefox
+# Windows (Brave)
+# PUPPETEER_EXEC_PATH=C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe
+# Linux (Brave)
+# PUPPETEER_EXEC_PATH=/usr/bin/brave-browser
+# Windows (Chrome)
+# PUPPETEER_EXEC_PATH=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe
+# Linux
+PUPPETEER_EXEC_PATH=/opt/google/chrome/google-chrome
+
 # automatically reloads commands as they are edited
 AUTO_RELOAD=false
 
@@ -23,11 +39,21 @@ DATABASE_URL=mysql://root@localhost:3306/project_canis
 REDIS_URL=redis://localhost:6379
 
 # the AI provider to use for AI model access
+# currently canis support openrouter and groq
+# its not mandatory to have set both API keys, you can use only one of them
+# if you want to use openrouter, set OPEN_ROUTER_API_KEY
+# if you want to use groq, set GROQ_API_KEY
 AI_PROVIDER=groq
 # the OpenRouter API key for AI model access
+# openrouter: https://openrouter.ai/
 OPEN_ROUTER_API_KEY=
 # the Groq API key for AI model access
+# groq: https://groq.com/
 GROQ_API_KEY=
+
+ALLOW_QUERY_CACHING=true
+QUERY_CACHING_COUNT=1000
+QUERY_CACHING_TTL=3600
 
 # the shell to use for executing commands
 # this should be a valid shell path, e.g., /bin/bash, /bin/zsh
