--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,11 @@ GROQ_MODEL=meta-llama/llama-4-scout-17b-16e-instruct
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.0-flash-001
 
+# the OpenAI API key for AI model access
+# openai: https://platform.openai.com/
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o
+
 ALLOW_QUERY_CACHING=true
 QUERY_CACHING_COUNT=1000
 QUERY_CACHING_TTL=3600
