--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,10 @@ GEMINI_MODEL=gemini-2.0-flash-001
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
 
+# the Ollama model
+# ollama: https://ollama.com/
+OLLAMA_MODEL=llama3.1
+
 ALLOW_QUERY_CACHING=true
 QUERY_CACHING_COUNT=1000
 QUERY_CACHING_TTL=3600
