--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-tts-api": "^2.0.2",
     "groq-sdk": "^0.27.0",
     "npmlog": "^7.0.1",
+    "ollama": "^0.5.16",
     "openai": "^5.10.2",
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.6.0",
