--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "openai": "^5.10.2",
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.6.0",
+    "semver": "^7.7.2",
     "systeminformation": "^5.27.7",
     "whatsapp-web.js": "^1.31.0",
     "youtubei.js": "^15.0.0"
@@ -51,6 +52,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^24.0.14",
     "@types/npmlog": "^7.0.0",
+    "@types/semver": "^7.7.1",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
