feat: added wakatime, dotenv reload and update mem monitor

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,7 @@ QUERY_CACHING_TTL=3600
 # the shell to use for executing commands
 # this should be a valid shell path, e.g., /bin/bash, /bin/zsh
 EXEC_SHELL=/bin/bash
+
+# Your Wakatime API keys
+# (optional) else the wakatime command aint going to work
+WAKATIME_API_KEY=
