--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Your bot name goes here
 PROJECT_CANIS_ALIAS=Canis
+# automatically reboot canis, if a potential memory leak has been detected,
+# or the memory usage was just way too high
+PROJECT_AUTO_RESTART=false
+PROJECT_MAX_MEMORY=1024 # 1GB
 
 # whether to enable debug mode
 # in debug mode, additional logging is enabled
