feat: axios now retry the request for 3 times or depends on config

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,7 @@ EXEC_SHELL=/bin/bash
 # Your Wakatime API keys
 # (optional) else the wakatime command aint going to work
 WAKATIME_API_KEY=
+
+# the number of attemp axios will do if the request
+# failed
+AXIOS_MAX_RETRY=3
