feat: axios instance config

--- a/.env.example
+++ b/.env.example
@@ -88,3 +88,7 @@ WAKATIME_API_KEY=
 # the number of attemp axios will do if the request
 # failed
 AXIOS_MAX_RETRY=3
+AXIOS_USER_AGENT=Canis/11.0.0
+AXIOS_TIMEOUT=30000
+AXIOS_ORIGIN=
+AXIOS_HOST=
