feat: update reactions

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.10.0",
     "cli-progress": "^3.12.0",
     "dotenv": "^17.2.0",
+    "emoji-regex": "^10.5.0",
     "fb-downloader-scrapper": "^3.0.1",
     "google-tts-api": "^2.0.2",
     "groq-sdk": "^0.27.0",
