feat: delete downloaded images files automatically after a minute and minor changes in mem monitoring

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ PROJECT_CANIS_ALIAS=Canis
 # automatically reboot canis, if a potential memory leak has been detected,
 # or the memory usage was just way too high
 PROJECT_AUTO_RESTART=false
-PROJECT_MAX_MEMORY=1024 # 1GB
+PROJECT_THRESHOLD_MEMORY=1024
+PROJECT_MAX_MEMORY=2048 # 2GB
 
 # whether to enable debug mode
 # in debug mode, additional logging is enabled
