--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^17.2.0",
     "emoji-regex": "^10.5.0",
     "fb-downloader-scrapper": "^3.0.1",
+    "genius-lyrics": "^4.4.7",
     "google-tts-api": "^2.0.2",
     "groq-sdk": "^0.27.0",
     "npmlog": "^7.0.1",
@@ -42,6 +43,7 @@
     "redis": "^5.6.0",
     "semver": "^7.7.2",
     "systeminformation": "^5.27.7",
+    "undici": "^7.16.0",
     "whatsapp-web.js": "^1.31.0",
     "youtubei.js": "^15.1.1"
   },
