feat: implement phishtank as a client instead of util

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ PROJECT_AUTO_RESTART=false
 PROJECT_THRESHOLD_MEMORY=1024
 PROJECT_MAX_MEMORY=2048 # 2GB
 
+PHISHTANK_ENABLE=true
+PHISHTANK_UPDATE_HOUR=3 # default run at 03:00 UTC
+PHISHTANK_AUTO_UPDATE=true
+
 # whether to enable debug mode
 # in debug mode, additional logging is enabled
 DEBUG=true
