--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redis": "^5.6.0",
     "semver": "^7.7.2",
     "systeminformation": "^5.27.7",
+    "unbzip2-stream": "^1.4.3",
     "undici": "^7.16.0",
     "whatsapp-web.js": "^1.31.0",
     "youtubei.js": "^15.1.1"
@@ -53,6 +54,7 @@
     "@types/node": "^24.0.14",
     "@types/npmlog": "^7.0.0",
     "@types/semver": "^7.7.1",
+    "@types/unbzip2-stream": "^1.4.3",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
