feat: integrate sentry for error monitoring

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ PHISHTANK_ENABLE=true
 PHISHTANK_UPDATE_HOUR=3 # default run at 03:00 UTC
 PHISHTANK_AUTO_UPDATE=true
 
+SENTRY_DNS=
+
 # whether to enable debug mode
 # in debug mode, additional logging is enabled
 DEBUG=true
