--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@google/genai": "^1.19.0",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@prisma/client": "^6.12.0",
+    "@sentry/node": "^10.15.0",
     "ai": "^4.3.19",
     "axios": "^1.10.0",
     "cli-progress": "^3.12.0",
