--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.6.0",
     "semver": "^7.7.2",
+    "speedtest-net": "^2.2.0",
     "systeminformation": "^5.27.7",
     "unbzip2-stream": "^1.4.3",
     "undici": "^7.16.0",
@@ -56,6 +57,7 @@
     "@types/node": "^24.0.14",
     "@types/npmlog": "^7.0.0",
     "@types/semver": "^7.7.1",
+    "@types/speedtest-net": "^2.1.5",
     "@types/unbzip2-stream": "^1.4.3",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
