feat: multiple bug fixes, improvements, change license to Apache 2.0 and bump version to 11.1.0

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ PROJECT_CANIS_ALIAS=Canis
 PROJECT_AUTO_RESTART=false
 PROJECT_THRESHOLD_MEMORY=1024
 PROJECT_MAX_MEMORY=2048 # 2GB
+PROJECT_AUTO_DOWNLOAD_MEDIA=true
+PROJECT_MAX_DOWNLOAD_MEDIA=25 # 25MB
 
 PHISHTANK_ENABLE=true
 PHISHTANK_UPDATE_HOUR=3 # default run at 03:00 UTC
