--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2021",
     "module": "commonjs",
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -12,7 +12,7 @@
     "strict": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./types"],
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src"]
+  "include": ["src", "src/commands/..ts", "..ts"]
 }
