feat: multiple bug fixes, performance improvements and new commands

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ PROJECT_MAX_MEMORY=2048 # 2GB
 PROJECT_AUTO_DOWNLOAD_MEDIA=true
 PROJECT_MAX_DOWNLOAD_MEDIA=25 # 25MB
 
+P_QUEUE_CONCURRENCY_COUNT=2
+
 PHISHTANK_ENABLE=true
 PHISHTANK_UPDATE_HOUR=3 # default run at 03:00 UTC
 PHISHTANK_AUTO_UPDATE=true
