--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ai": "^4.3.19",
     "axios": "^1.10.0",
     "cli-progress": "^3.12.0",
+    "countries-and-timezones": "^3.8.0",
     "dotenv": "^17.2.0",
     "emoji-regex": "^10.5.0",
     "fb-downloader-scrapper": "^3.0.1",
@@ -40,10 +41,13 @@
     "groq-sdk": "^0.27.0",
     "is-spaghetti-code": "^1.0.1",
     "libphonenumber-js": "^1.12.24",
+    "mathjs": "^15.0.0",
+    "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "npmlog": "^7.0.1",
     "ollama": "^0.5.16",
     "openai": "^5.10.2",
+    "p-queue": "^9.0.0",
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.6.0",
     "semver": "^7.7.2",
@@ -57,6 +61,7 @@
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
     "@types/dotenv": "^6.1.1",
+    "@types/he": "^1.2.3",
     "@types/node": "^24.0.14",
     "@types/npmlog": "^7.0.0",
     "@types/semver": "^7.7.1",
