Implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "clean": "rimraf dist",
     "build": "tsc",
     "start": "clear && while [ true ]; do node dist/index.js ; done",
-    "dev": "clear && while [ true ]; do ts-node src/index.ts ; done",
-    "start:dev": "clear && ts-node-dev src/index.ts"
+    "dev": "clear && while [ true ]; do ts-node src/index.ts ; done"
   },
   "author": {
     "name": "Melvin Jones Repol",
@@ -72,7 +71,6 @@
     "prisma": "^6.12.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "engines": {
