chore: remove rimraf, added build script, add env table in readme and support incremental updates

--- a/.env.example
+++ b/.env.example
@@ -50,8 +50,8 @@ PUPPETEER_EXEC_PATH=/opt/google/chrome/google-chrome
 AUTO_RELOAD=false
 
 # the database connection URL
-DATABASE_URL=mysql://root@localhost:3306/project_canis
-REDIS_URL=redis://localhost:6379
+DATABASE_URL=mysql://root@127.0.0.1:3306/project_canis
+REDIS_URL=redis://127.0.0.1:6379
 
 # the AI provider to use for AI model access
 # currently canis support openrouter and groq
