--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "build": "node scripts/build.js",
-    "build:clean": "node scripts/build.js --clean",
+    "build": "ts-node scripts/build.ts",
+    "build:clean": "ts-node scripts/build.ts --clean",
     "start": "clear && while [ true ]; do node dist/index.js ; done",
-    "dev": "clear && while [ true ]; do ts-node src/index.ts ; done"
+    "dev": "clear && while [ true ]; do ts-node src/index.ts ; done",
+    "test:wa": "ts-node tests/webwhatsapp.ts",
+    "test:sentry": "ts-node tests/sentry.ts"
   },
   "author": {
     "name": "Melvin Jones Repol",
@@ -25,12 +27,12 @@
     "email": "mrepol742@gmail.com"
   },
   "dependencies": {
-    "@google/genai": "^1.19.0",
-    "@openrouter/ai-sdk-provider": "^0.7.2",
-    "@prisma/client": "^6.12.0",
-    "@sentry/node": "^10.15.0",
-    "ai": "^4.3.19",
-    "axios": "^1.10.0",
+    "@google/genai": "^1.27.0",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@prisma/client": "^6.18.0",
+    "@sentry/node": "^10.22.0",
+    "ai": "^5.0.81",
+    "axios": "^1.13.0",
     "cli-progress": "^3.12.0",
     "countries-and-timezones": "^3.8.0",
     "dotenv": "^17.2.0",
@@ -38,24 +40,24 @@
     "fb-downloader-scrapper": "^3.0.1",
     "genius-lyrics": "^4.4.7",
     "google-tts-api": "^2.0.2",
-    "groq-sdk": "^0.27.0",
+    "groq-sdk": "^0.34.0",
     "is-spaghetti-code": "^1.0.1",
     "libphonenumber-js": "^1.12.24",
     "mathjs": "^15.0.0",
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "npmlog": "^7.0.1",
-    "ollama": "^0.5.16",
-    "openai": "^5.10.2",
+    "ollama": "^0.6.0",
+    "openai": "^6.7.0",
     "p-queue": "^9.0.0",
     "qrcode-terminal": "^0.12.0",
-    "redis": "^5.6.0",
+    "redis": "^5.9.0",
     "semver": "^7.7.2",
     "speedtest-net": "^2.2.0",
     "systeminformation": "^5.27.7",
     "unbzip2-stream": "^1.4.3",
     "undici": "^7.16.0",
-    "whatsapp-web.js": "^1.31.0",
+    "whatsapp-web.js": "^1.34.1",
     "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
@@ -68,7 +70,7 @@
     "@types/semver": "^7.7.1",
     "@types/speedtest-net": "^2.1.5",
     "@types/unbzip2-stream": "^1.4.3",
-    "prisma": "^6.12.0",
+    "prisma": "^6.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
