feat: breaking changes bug fixes and improvements

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PROJECT_THRESHOLD_MEMORY=1024
 PROJECT_MAX_MEMORY=2048 # 2GB
 PROJECT_AUTO_DOWNLOAD_MEDIA=true
 PROJECT_MAX_DOWNLOAD_MEDIA=25 # 25MB
+NODE_ENV=development
 
 P_QUEUE_CONCURRENCY_COUNT=2
 
@@ -15,10 +16,6 @@ PHISHTANK_UPDATE_HOUR=3 # default run at 03:00 UTC
 PHISHTANK_AUTO_UPDATE=true
 
 SENTRY_DNS=
-
-# whether to enable debug mode
-# in debug mode, additional logging is enabled
-DEBUG=true
 
 # the command prefix used to trigger bot commands
 COMMAND_PREFIX=!
