chore: add an option to disable the bot font and remove .env in readme

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ PROJECT_THRESHOLD_MEMORY=1024
 PROJECT_MAX_MEMORY=2048 # 2GB
 PROJECT_AUTO_DOWNLOAD_MEDIA=true
 PROJECT_MAX_DOWNLOAD_MEDIA=25 # 25MB
+PROJECT_ENABLE_BOT_FONT=true
+
 NODE_ENV=development
 
 P_QUEUE_CONCURRENCY_COUNT=2
