--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "systeminformation": "^5.27.11",
     "unbzip2-stream": "^1.4.3",
     "undici": "^7.16.0",
-    "whatsapp-web.js": "^1.34.2",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
     "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
