feat: bump prisma client to v7.1.0

--- a/.env.example
+++ b/.env.example
@@ -48,8 +48,15 @@ PUPPETEER_EXEC_PATH=/opt/google/chrome/google-chrome
 # automatically reloads commands as they are edited
 AUTO_RELOAD=false
 
-# the database connection URL
+# the database connection URL for accessing prisma cli
 DATABASE_URL=mysql://root@127.0.0.1:3306/project_canis
+
+# the database config for accessing the db
+PRISMA_MARIA_DB_HOST=127.0.0.1
+PRISMA_MARIA_DB_USER=root
+PRISMA_MARIA_DB_PASSWORD=
+PRISMA_MARIA_DB_DATABASE=project_canis
+
 REDIS_URL=redis://127.0.0.1:6379
 
 # the AI provider to use for AI model access
