--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "build": "ts-node scripts/build.ts",
+    "build": "prisma generate && ts-node scripts/build.ts",
     "build:clean": "ts-node scripts/build.ts --clean",
     "start": "clear && while [ true ]; do node dist/index.js ; done",
     "dev": "clear && while [ true ]; do ts-node src/index.ts ; done",
@@ -28,8 +28,9 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@openrouter/ai-sdk-provider": "^1.2.8",
-    "@prisma/client": "^6.19.0",
-    "@sentry/node": "^10.28.0",
+    "@prisma/adapter-mariadb": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "@sentry/node": "^10.31.0",
     "ai": "^5.0.106",
     "axios": "^1.13.2",
     "cli-progress": "^3.12.0",
@@ -69,7 +70,7 @@
     "@types/semver": "^7.7.1",
     "@types/speedtest-net": "^2.1.5",
     "@types/unbzip2-stream": "^1.4.3",
-    "prisma": "^6.18.0",
+    "prisma": "^7.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
