feat: bug fixes and improvements
- Add src/runner.ts to run and restart target scripts and run checks
  this to prevent the bot from restarting over again if it didnt meet
  the requirements and also removes commands the only works on linux
- Update package.json to use runner for start and dev
- Remove redundant checkRequirements call from src/index.ts
- Improve error messages in requirements checks (include err)
- Add prisma generate step and tidy README/license formatting
- Fix tsconfig typeRoots path from src/typeses to src/types

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "prisma generate && ts-node scripts/build.ts",
     "build:clean": "ts-node scripts/build.ts --clean",
-    "start": "clear && while [ true ]; do node dist/index.js ; done",
-    "dev": "clear && while [ true ]; do ts-node src/index.ts ; done",
+    "start": "node dist/runner.js dist/index.js",
+    "dev": "ts-node src/runner.ts src/index.ts",
     "test:sentry": "ts-node tests/sentry.ts"
   },
   "author": {
