--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ollama": "^0.6.3",
     "openai": "^6.9.1",
     "p-queue": "^9.0.1",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.10.0",
     "semver": "^7.7.3",
@@ -66,6 +67,7 @@
     "@types/he": "^1.2.3",
     "@types/node": "^24.0.14",
     "@types/npmlog": "^7.0.0",
+    "@types/qrcode": "^1.5.6",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/semver": "^7.7.1",
     "@types/speedtest-net": "^2.1.5",
